fixed modal width on mobile and added view all to table

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -124,4 +124,7 @@
   	width: 300px;
   	height: 300px;
 	}
+	.modal-dialog{
+		width: 90%;
+	}
 }
